Opened 11 years ago

Closed 10 years ago

#10439 closed bug (fixed)

middle click causes crash in BColumn

Reported by: mmadia Owned by: axeld
Priority: normal Milestone: R1
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #10740
Platform: All

Description

hrev46705 gcc2h.

Upon opening HaikuDepot, middle clicking any column will result in the attached crash.

Upon opening, left clicking any list (to adjust its sorting) will result in the middle click effectively being ignored, but not crashing.

Furthermore, manually resizing a column via a left click will allow middle click to work as expected.

Attachments (2)

Change History (10)

comment:1 by anevilyak, 11 years ago

Component: Applications/HaikuDepotKits/Interface Kit
Owner: changed from stippi to axeld

That looks like a problem in BColumnListView.

comment:2 by kallisti5, 11 years ago

Milestone: R1R1/alpha5

comment:3 by diver, 11 years ago

Blocking: 10740 added

(In #10740) Indeed. Thanks!

comment:4 by Kev, 11 years ago

Confirmed on hrev47114.

comment:5 by diver, 10 years ago

Milestone: R1/alpha5R1

comment:6 by Janus, 10 years ago

patch: 01

comment:7 by Janus, 10 years ago

Fixed in hrev48988.

comment:8 by waddlesplash, 10 years ago

Resolution: fixed
Status: newclosed

@Janus: did Oliver grant you ticket-modify permissions yet? If not, maybe give him a poke on email...

Note: See TracTickets for help on using tickets.