BColumnListView: Avoid crash on column resize.

* Inizialize fSelectedColumn before calling ResizeSelectedColumn().
* Fixes #10439.